# NanoPB_JRKG2

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.c
.devcontainer/: Dockerfile  devcontainer.json
lib/JRKG2_V2/: CMakeLists.txt  jrkg2.c  jrkg2.h
src/: cdc_usb.h  main.c  nanopb.c  nanopb.h  serial_usb.c  serial_usb.h
src/proto/: uart.proto
